--- a/pom.xml
+++ b/pom.xml
@@ -128,14 +128,14 @@
             <version>8.0.15</version>
         </dependency>
         <dependency>
-            <groupId>org.jfxtras</groupId>
-            <artifactId>jmetro</artifactId>
-            <version>5.3</version>
-        </dependency>
-        <dependency>
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx</artifactId>
             <version>8.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fxmisc.cssfx</groupId>
+            <artifactId>cssfx</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
